# UL_Project_Arena_Group_7

./: .gitattributes  .gitignore  .mailmap  LICENSE  README.md  docker-compose.yaml  package-lock.json
.forgejo/workflows/: backend_deploy.yaml  check_lfs.yaml  main_deploy.yaml
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  flake.nix  run_tests.sh
backend/migrations/: 20241121000000_init.sql  20241122000000_notifications.sql
backend/src/: auth.rs  config.rs  handlers.rs  lib.rs  main.rs  models.rs  repository.rs  storage.rs
backend/src/routes/: admin.rs  authenticated.rs  mod.rs  public.rs
backend/tests/: advanced_smoke_test.sh  api_tests.rs  auth_integration_tests.rs  bindings.rs  handler_integration_tests.rs  main_setup.rs  model_validation_tests.rs  repository_integration_tests.rs  storage_handler_tests.rs  storage_tests.rs  test_flow.sh
doc/: project-description.md
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/pages/: homepage.jsx
frontend/src/static/styles/: global.scss  homepage.scss
frontend/types/: AdminDashboardStats.ts  Comment.ts  CreateCommentRequest.ts  CreateProjectRequest.ts  Like.ts  NotificationResponse.ts  PresignedUrlRequest.ts  PresignedUrlResponse.ts  Project.ts  RegisterUserRequest.ts  UpdateProjectRequest.ts  User.ts  UserProfile.ts  Vote.ts
fyp_portal/: .dockerignore  Dockerfile.django  docker-compose.django.yml  manage.py  requirements.txt
fyp_portal/fyp_portal/: asgi.py  settings.py  urls.py  wsgi.py
fyp_portal/users/: admin.py  models.py
