[package]
name = "fyp-portal"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 = "1.115.0"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "request-id", "util"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
ts-rs = { version = "11.1.0", features = ["uuid-impl", "chrono-impl"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.12.24", features = ["json"] }
dotenv = "0.15.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "macros"] }
tracing = "0.1.41"

[dev-dependencies]
serial_test = "3.2.0"

